--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ firebase-admin~=6.6.0
 protobuf~=5.29.2
 pillow~=11.1.0
 grpcio~=1.68.1
+dynamo-utils @ git+https://github.com/kit-g/dynamo-utils.git
